--- a/src/components/SuggestedApartment/SuggestedApartment.css
+++ b/src/components/SuggestedApartment/SuggestedApartment.css
@@ -1,8 +1,11 @@
 .suggestedApartment {
   margin: 10px;
   overflow: hidden;
-  box-shadow: 0px 6px 18px -9px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 6px 18px -9px rgba(0, 0, 0, 0.7);
   transition: transform 100ms ease-in;
+  height: 500px;
+  width: 400px;
+  
 }
 
 .suggestedApartment:hover {
@@ -11,8 +14,8 @@
 
 .suggestedApartment img {
   object-fit: fill;
-  min-width: 300px;
-  min-height: 200px;
+  width: 400px;
+  height: 270px;
   width: 100%;
 }
 
@@ -46,5 +49,4 @@
 
 .favouriteIcon {
   float: right;
-  margin-top: 10px;
 }
