--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,6 @@
 .header {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   width: 100%;
@@ -14,7 +15,5 @@
 .header__right {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
-  width: 15vw;
   margin-right: 80px;
 }
